[master]
    - Removes options to set PDF and PS directories per .bib database as the general options have also been deleted.
    - Removes option to hide the BibTeX Code tab in the entry editor.
    - Changes the old integrity check by improving the code base (+tests) and converting it to a simple issues table
    - Removes option to set a custom icon for the external file types. This is not possible anymore with the new icon font.
    - Added combo box in MassSetFieldAction to simplify selecting the correct field name
    - Fixes bug when having added and then removed a personal journal list, an exception is always shown on startup
    - Removes legacy options to sync files in the "pdf" or "ps" field
    - Removes button to merge entries and keep the old ones.
    - Removes non-compact rank symbols in favor of compact rank
    - Feature: Merge information from both entries on duplication detection
    - Always use import inspection dialog on import from file
    - All duplicate whitespaces / tabs / newlines are now removed from non-multiline fields
    - Fixed a bug in the IEEEXploreFetcher
    - Feature: Merge information from a DOI generated BibTex entry to an entry
    - Added more characters to HTML/Unicode converter
    - Feature: Push citations to Texmaker (SF: #318, #582)
    - Case changers improved to honor words (not yet more than single words) within {}
    - Feature: Added converters from HTML and Unicode to LaTeX on right click in text fields (#191)
    - Fixed bug 1282 (SourceForge) related to backslashes duplication.
    - Feature: Add an option to the FileList context menu to delete an associated file from the file system
    - Feature: Field names "Doi", "Ee", and "Url" are now written as "DOI", "EE", and "URL"
    - The default language is now automatically set to the system's locale.
    - Use correct encoding names (#155) and replace old encoding names in bibtex files. This changes the file header.